--- a/Report.html
+++ b/Report.html
@@ -163,7 +163,7 @@
         <li>Perform a training run with some performant version of Prioritized Experience Replay, such as
             Hindsight Experience Replay (HER). Vanilla Prioritized Experience Replay is already implemented in the
             current code, but for some reason, experimenting with it did not yield great results. In turn, HER should
-            be able to better enhance performance in an challenging environment with sparse rewards such as this one.
+            be able to better enhance performance in a challenging environment with sparse rewards such as this one.
         </li>
     </ul>
 </div>
